# agcore

./: docker-compose.yml  pyproject.toml
app/models/: models_new.py
services/api/: Dockerfile
services/api/app/: main.py
services/api/app/db/: database.py
services/api/app/models/: models.py
services/api/app/routers/: brain_pile.py  user.py
services/api/src/agcore_api/core/: common.py  keycloak_auth.py
services/api/src/agcore_api/routers/: project.py
