[project]
name = "agcore"
version = "0.1.2"
description = "core service for agdev"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "sqlmodel",
    "psycopg2-binary",
    "nanoid",
    "agpyutils @ git+https://github.com/iwaag/agpyutils.git@main"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
