[project]
name = "agcore"
version = "0.1.2"
description = "core service for agdev"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "fastapi[standard]",
    "uvicorn",
    "sqlmodel",
    "psycopg2-binary",
    "nanoid",
    "agpyutils @ git+https://github.com/iwaag/agpyutils.git@main",
]

[build-system]
requires = ["uv_build>=0.10.3,<0.11.0"]
build-backend = "uv_build"

[tool.uv]
package = false
